--- a/src/assets/scss/components/_form.scss
+++ b/src/assets/scss/components/_form.scss
@@ -1,12 +1,12 @@
 // Form
-.SH__FormWrapper {
+.Root__FormWrapper {
   & + & {
     margin-top: 1rem;
   }
 }
 
 // Form
-.SH__FormGroup {
+.Root__FormGroup {
   &.Horizontal {
     & > * + * {
       margin-left: 0.3rem;
