refactor: update styels system

--- a/packages/components/.storybook/storybook.css
+++ b/packages/components/.storybook/storybook.css
@@ -1,6 +1,9 @@
-// Global Window
-.Root__Window__LockScroll {
-  overflow: hidden !important;
+.Root__Window__LockScroll{
+  overflow:hidden!important
+}
+
+*,:after,:before{
+  box-sizing:border-box
 }
 
 :root{
