--- a/packages/components/src/assets/index.scss
+++ b/packages/components/src/assets/index.scss
@@ -69,18 +69,18 @@
   --info-9-color:env(--info-9-color,#1a4d5f);
   --info-10-color:env(--info-10-color,#0b3341);
 
-  --neutral-color:env(--neutral-color,#989898);
-  --neutral-0-color:env(--neutral-0-color,#f8f8f8);
-  --neutral-1-color:env(--neutral-1-color,#f0f0f0);
-  --neutral-2-color:env(--neutral-2-color,#dcdcdc);
-  --neutral-3-color:env(--neutral-3-color,#bdbdbd);
-  --neutral-4-color:env(--neutral-4-color,#989898);
-  --neutral-5-color:env(--neutral-5-color,#7c7c7c);
-  --neutral-6-color:env(--neutral-6-color,#656565);
-  --neutral-7-color:env(--neutral-7-color,#525252);
-  --neutral-8-color:env(--neutral-8-color,#464646);
-  --neutral-9-color:env(--neutral-9-color,#3d3d3d);
-  --neutral-10-color:env(--neutral-10-color,#292929);
+  --neutral-color: env(--neutral-color, #a0a0a0);
+  --neutral-0-color: env(--neutral-0-color, #ffffff);
+  --neutral-1-color: env(--neutral-1-color, #f5f5f5);
+  --neutral-2-color: env(--neutral-2-color, #e5e5e5);
+  --neutral-3-color: env(--neutral-3-color, #cccccc);
+  --neutral-4-color: env(--neutral-4-color, #a0a0a0);
+  --neutral-5-color: env(--neutral-5-color, #6f6f6f);
+  --neutral-6-color: env(--neutral-6-color, #595959);
+  --neutral-7-color: env(--neutral-7-color, #3e3e3e);
+  --neutral-8-color: env(--neutral-8-color, #2d2d2d);
+  --neutral-9-color: env(--neutral-9-color, #1e1e1e);
+  --neutral-10-color: env(--neutral-10-color, #000000);
 
   --primary-color:env(--primary-color,#3f69ff);
   --primary-0-color:env(--primary-0-color,#e5f0ff);
