--- a/packages/components/src/assets/index.scss
+++ b/packages/components/src/assets/index.scss
@@ -82,13 +82,13 @@
   --neutral-9-color: env(--neutral-9-color, #1e1e1e);
   --neutral-10-color: env(--neutral-10-color, #000000);
 
-  --primary-color:env(--primary-color,#3f69ff);
+  --primary-color:env(--primary-color,#1433ff);
   --primary-0-color:env(--primary-0-color,#e5f0ff);
   --primary-1-color:env(--primary-1-color,#cfe3ff);
   --primary-2-color:env(--primary-2-color,#a9c9ff);
   --primary-3-color:env(--primary-3-color,#75a2ff);
-  --primary-4-color:env(--primary-4-color,#3f69ff);
-  --primary-5-color:env(--primary-5-color,#1433ff);
+  --primary-4-color:env(--primary-4-color,#1433ff);
+  --primary-5-color:env(--primary-5-color,#0028ff);
   --primary-6-color:env(--primary-6-color,#0019ff);
   --primary-7-color:env(--primary-7-color,#001aff);
   --primary-8-color:env(--primary-8-color,#0017e3);
